Basic Image cache

--- a/assets_src/config/strings/systems-en-GB.yaml
+++ b/assets_src/config/strings/systems-en-GB.yaml
@@ -1,6 +1,6 @@
 ---
 
 en-GB:
-  system_description_snes: The Super Nintendo Entertainment System (SNES), also known as Super NES or Super Nintendo (and Super Famicom in Japan), is a 16-bit home console developed by Nintendo as a successor to the NES. It faced fierce competition from the Sega Mega Drive, but by the time it was discontinued in 2003 it had sold 49.1 million units, making it the best selling console of the 16-bit era.
+  system_description_snes: The Super Nintendo Entertainment System (SNES), also known as Super NES or Super Nintendo (or Super Famicom in Japan), is a 16-bit home console developed by Nintendo as the successor to the NES. It faced fierce competition from the Sega Mega Drive, but by the time it was discontinued in 2003 it had sold 49.1 million units, making it the best selling console of the 16-bit era.
 
 ...
