--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ set (SOURCES
 	"src/util/cpu_update_texture.cpp"
 	"src/util/dll.cpp"
 	"src/util/dx11_state.cpp"
+	"src/util/image_cache.cpp"
 	"src/util/opengl_interop.cpp"
 
 	"src/zip/zip_file.cpp"
@@ -117,6 +118,7 @@ set (HEADERS
 	"src/util/c_string_cache.h"
 	"src/util/dll.h"
 	"src/util/dx11_state.h"
+	"src/util/image_cache.h"
 	"src/util/opengl_interop.h"
 
 	"src/zip/zip_file.h"
