Move arcade to its own category

--- a/assets_src/config/strings/ui-en-GB.yaml
+++ b/assets_src/config/strings/ui-en-GB.yaml
@@ -10,5 +10,9 @@ en-GB:
   gen7: 7th Generation
   gen8: 8th Generation
   gen9: 9th Generation
+  arcade: Arcade
+  console: Console
+  handheld: Handheld
+  computer: Computer
 
 ...
