--- a/assets_src/config/ui_style/retrograde_ui.yaml
+++ b/assets_src/config/ui_style/retrograde_ui.yaml
@@ -23,7 +23,7 @@ uiStyle:
     background: ""
     item:
       normal: { img: "ui/grid_item.png", colour: "#FFFFFF" }
-      hover: ""
+      hover: { img: "ui/grid_item_selected.png", colour: "#EE595A" }
       selected: { img: "ui/grid_item_selected.png", colour: "#EE595A" }
       drag: ""
       innerBorder: [ 28, 28, 28, 28 ]
