--- a/halley_project/asset_manifest.yaml
+++ b/halley_project/asset_manifest.yaml
@@ -19,6 +19,10 @@ packs:
       - ~:audioEvent
       - ~:variableTable
       - ~:binaryFile:lua
+      - ~:uiDefinition
+      - ~:gameProperties
+      - ~:prefab
+      - ~:scene
 
   - name: images
     matches:
