--- a/assets_src/config/strings/ui-en-GB.yaml
+++ b/assets_src/config/strings/ui-en-GB.yaml
@@ -1,6 +1,14 @@
 ---
 
 en-GB:
+  gen1arcade: 1st Generation Arcade
+  gen2arcade: 2nd Generation Arcade
+  gen3arcade: 3rd Generation Arcade
+  gen4arcade: 4th Generation Arcade
+  gen5arcade: 5th Generation Arcade
+  gen6arcade: 6th Generation Arcade
+  gen7arcade: 7th Generation Arcade
+  gen8arcade: 8th Generation Arcade
   gen1console: 1st Generation Consoles
   gen2console: 2nd Generation Consoles
   gen3console: 3rd Generation Consoles
