Force AR < 16:9 to expand vertically instead of cropping horizontally

--- a/assets_src/ui/game_capsule.yaml
+++ b/assets_src/ui/game_capsule.yaml
@@ -19,6 +19,7 @@ children:
     widget:
       class: label
       id: name
+      maxHeight: 50
       maxWidth: 510
       style: labelListEntry
       text: Game Name
