--- a/assets_src/config/ui_style/retrograde_ui.yaml
+++ b/assets_src/config/ui_style/retrograde_ui.yaml
@@ -26,7 +26,7 @@ uiStyle:
       hover: { img: "ui/grid_item.png", colour: "#FFFFFF" }
       selected: { img: "ui/grid_item_selected.png", colour: "#EE595A" }
       drag: ""
-      innerBorder: [ 28, 28, 28, 28 ]
+      innerBorder: [ 24, 24, 24, 24 ]
     innerBorder: [ 2, 2, 2, 2 ]
     extraMouseBorder: [ 1, 1, 1, 1 ]
     scrollBorder: [ 200, 100, 200, 100 ]
@@ -51,3 +51,20 @@ uiStyle:
   labelListEntry:
     classes: [label]
     label: { font: Roboto Regular, size: 35, colour: "#FFFFFF" }
+
+  rgScrollbar:
+    classes: [scrollbar]
+    horizontalBorder: [ 60, 0, 0, 0]
+    verticalBorder: [0, 60, 0, 0]
+    bar:
+      horizontal: { img: ui/scrollbar.png, colour: "#FFFFFF" }
+      vertical: { img: ui/scrollbar.png, colour: "#FFFFFF" }
+    thumb:
+      normal: { img: ui/scrollbar_thumb.png, colour: "#FFFFFF" }
+      down: { img: ui/scrollbar_thumb.png, colour: "#FFFFFF" }
+      hover: { img: ui/scrollbar_thumb.png, colour: "#FFFFFF" }
+      disabled: { img: ui/scrollbar_thumb.png, colour: "#FFFFFF" }
+      innerBorder: [ 0, 0, 0, 0 ]
+      upSound: ""
+      downSound: ""
+      hoverSound: ""
