--- a/assets_src/ui/choose_system.yaml
+++ b/assets_src/ui/choose_system.yaml
@@ -3,8 +3,11 @@ sizer:
   columnProportions: []
   type: vertical
 widget:
-  class: widget
-  id: ""
+  class: image
+  colour: "#110404"
+  id: bg
+  image: whitebox.png
+  material: Retrograde/RadialGradient
 children:
   - uuid: 521a33fe-a5e6-4121-acb7-42cb2f3bed9f
     border: [80, 80, 80, 0]
