--- a/assets_src/ui/in_game_menu.yaml
+++ b/assets_src/ui/in_game_menu.yaml
@@ -24,24 +24,33 @@ children:
           columnProportions: []
         widget:
           class: image
+          colour: "#ffffff"
           id: header
           image: ui/header.png
-      - uuid: 370cad4d-6003-4382-bd63-5e94d96238ab
+          rotation: 0
+      - uuid: 98732ed1-2122-467e-a12a-83bc79fa23fd
         proportion: 1
         border: [50, 50, 50, 50]
         sizer:
           columnProportions: []
-        widget:
-          class: list
-          id: options
-          options:
-            - id: resume
-              text: Resume
-            - id: exit
-              text: Exit
-          size: [614, 0]
-          style: textMenu
-        fill: [left, top]
+          gap: 50
+        children:
+          - uuid: 370cad4d-6003-4382-bd63-5e94d96238ab
+            proportion: 0
+            border: [0, 0, 0, 0]
+            sizer:
+              columnProportions: []
+            widget:
+              class: list
+              id: options
+              options:
+                - id: resume
+                  text: Resume
+                - id: exit
+                  text: Exit
+              size: [614, 0]
+              style: textMenu
+            fill: [left, fillVertical]
       - uuid: e0403a87-5059-4fc9-8af9-e7cef4eb1ed9
         sizer:
           columnProportions: []
